# MLOPS_G116

./: .dvcignore  .gcloudignore  .gitignore  README.md  cloudbuild.yaml  data.dvc  main.py  main_entrypoint.sh  notas.txt  pyproject.toml  report.html  reproducibility_tester.py  requirements.txt  requirements_GPU.txt  requirements_dev.txt  requirements_frontend.txt  tasks.py  vertex_ai_train.yaml  wandb_tester.py
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.dvc/: config
.github/workflows/: linting.yaml  tests.yaml
artifacts/registry_model/: model.pth
configs/: config.yaml  evaluate.yaml  sweep.yaml  visualize.yaml
configs/evaluation/: default.yaml  eval_default.yaml
configs/model/: densenet121.yaml  mod1.yaml  resnet18.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/training/: exp1.yaml  exp2.yaml
configs/vertex/: vertex.yaml  vertex_ai_train.yaml  vertex_sweep.yaml
configs/visualization/: visualize_default.yaml
data/: processed.dvc  raw.dvc
dockerfiles/: api.dockerfile  backend.dockerfile  data.local.dockerfile  data.remote.dockerfile  data_local_entrypoint.sh  data_remote_entrypoint.sh  evaluate.dockerfile  evaluate_entrypoint.sh  frontend.dockerfile  main.dockerfile  main.local.dockerfile  main_CPU_entrypoint.sh  main_entrypoint.sh  main_local_entrypoint.sh  train.dockerfile  train.local.dockerfile  train_entrypoint.sh  train_local_entrypoint.sh  visualize.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: cloud_deployment.md  index.md
models/: model.pth
outputs/2026-01-19/16-53-59/: profile.prof
outputs/2026-01-19/16-53-59/.hydra/: config.yaml  hydra.yaml
reports/: README.md
src/mlops_g116/: backend.py  data.py  data_importfromcloud.py  evaluate.py  frontend.py  main.py  model.py  model_boilerplate.py  model_hydra.py  registry_download.py  sweep_runner.py  train.py  train_boilerplate.py  train_hydra.py  visualize.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_api.py
tests/performancetests/: locustfile.py
tests/unittests/: conftest.py  test_data.py  test_data_module.py  test_evaluate.py  test_evaluate_module.py  test_frontend.py  test_main_module.py  test_model_boilerplate.py  test_registry_download_module.py  test_train.py  test_train_boilerplate_module.py  test_visualize_module.py
(+7 files in other folders)
