[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_g116"
version = "0.0.1"
description = "Git repo of the project of the course Machine Learning Operations"
authors = [
  { name = "s254311", email = "sergi.luponsantacana@gmail.com" },
  { name = "s253749", email = "armandgatiusugalde@gmail.com" },
  { name = "dtu_g116", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
data = "mlops_g116.data:main"
train = "mlops_g116.train:main"
evaluate = "mlops_g116.evaluate:main"
visualize = "mlops_g116.visualize:main"
main = "mlops_g116.main:app"
train_hydra = "mlops_g116.train_hydra:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
